ngrok/src/patch-env-credentials.yaml
# patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok-operator
  namespace: xyz
spec:
  selector:
    matchLabels:
      app: ngrok-operator
  template:
    metadata:
      labels:
        app: ngrok-operator
    spec:
      containers:
        - name: ngrok-operator
          image: ngrok/ngrok-operator:v0.16.4
