ngrok/src/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ngrok
spec:
  controllerName: ngrok.com/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ngrok
spec:
  gatewayClassName: ngrok
  listeners:
    - name: http-listener
      protocol: HTTP
      port: 80
