ngrok/src/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ngrok
spec:
  gatewayClassName: ngrok
  listeners:
    - name: http-listener
      protocol: HTTP
      port: 80  
      hostname: ryanguild.xyz
