ngrok/src/ryanguild.xyz.ngrok.app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    k8s.ngrok.com/modules: ngrok-module-set
spec:
  ingressClassName: ngrok
  rules:
    - host: ryanguild.xyz.ngrok.app
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello
                port: 
                  number: 80
